# chatbot-whatsapp

./: .dockerignore  .env.example  .gitignore  404.html  Dockerfile  README.md  app.py  chains.py  config.py  docker-compose.yml  evolution_api.py  index.html  logger.py  memory.py  message_buffer.py  mkdocs.yml  objects.inv  prompts.py  pyproject.toml  requirements.txt  vectorstore.py
app/: index.html
docs/: app.md
search/: search_index.json
