[project]
name = "chatbot-whatsapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.119.0",
    "fastembed>=0.7.3",
    "google-genai>=1.45.0",
    "langchain>=1.0.0",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4",
    "langchain-groq>=1.0.0",
    "loguru>=0.7.3",
    "pypdf>=6.1.1",
    "python-dotenv>=1.1.1",
    "redis>=6.4.0",
    "requests>=2.32.5",
]
